# oxid

./: README.md  build.sh  flake.nix  makefile
fabric/: .gitignore  build.gradle.kts  gradle.properties  logging.properties  settings.gradle.kts
fabric/src/main/java/me/wawwior/oxid/: Oxid.java
fabric/src/main/java/me/wawwior/oxid/jni/: JNI.java  JNICallback.java
fabric/src/main/resources/: fabric.mod.json  oxid.mixins.json  x86-64-linux
macros/: Cargo.toml
macros/src/: lib.rs
native/: Cargo.toml
native/src/: lib.rs  util.rs
