[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
jni = "0.21.1"
macros = { version = "0.1.0", path = "../macros" }
serde = { version = "1.0.219"}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 3
